force-app/main/default/objects/Carrier_Rate_Quote__c/Carrier_Rate_Quote__c.object-meta.xml
<CustomObject>
    <label>Carrier Rate Quote</label>
    <nameField>
        <label>Carrier Rate Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Rate Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>