force-app/main/default/objects/Carrier_Rate_Quote__c/fields/Delivery_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Timestamp__c</fullName>
    <label>Delivery Timestamp</label>
    <type>DateTime</type>
</CustomField>