force-app/main/default/objects/Carrier_Rate_Quote__c/fields/Rate_Response__c.field-meta.xml
<CustomField>
    <fullName>Rate_Response__c</fullName>
    <label>Rate Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>