force-app/main/default/objects/Carrier_Rate_Quote__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Carrier_Shipment__c</referenceTo>
    <relationshipLabel>Carrier Rate Quotes</relationshipLabel>
    <relationshipName>Carrier_Rate_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>